--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   column-gap: 36px;
-  padding: 92px 50px 96px;
+  padding: 92px 50px 92px;
 }
 
 .header-menu {
@@ -39,7 +39,7 @@
 
 .header__logo {
   display: block;
-  width: 148px;
+  width: 135px;
 }
 
 .header__logo-image {
@@ -63,3 +63,90 @@
   list-style: none;
 }
 
+.cover {
+  position: relative;
+  min-height: 760px;
+  background-image: url(./../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover__title {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+  color: #fff;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+  padding: 161px 29px 208px 55px;
+  background-color: transparent;
+}
+
+.aligned-text {
+  display: block;
+  justify-content: center;
+  line-height: 1.3;
+}
+
+.aligned-text_left {
+  text-align: left;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 28.3px;
+}
+
+.cover__description {
+  display: flex;
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+  align-items: end;
+  justify-content: space-between;
+  gap: 104px;
+  padding: 650px 50px 50px 50px;
+}
+
+.cover__description-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #fff;
+  word-spacing: 18px;
+  padding: 12px 0;
+  
+}
+
+.bet-button {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 12px 32.5px;
+  
+  
+}
