--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,13 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  column-gap: 36px;
-  padding: 92px 50px 92px;
+  gap: 36px;
+  padding: 100px 50px 91px;
 }
 
 .header-menu {
   display: flex;
+  padding-top: 2px;
 }
 
 .header__links-list {
@@ -29,8 +30,7 @@
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  line-height: 100%;
-  text-underline-offset: 4px;
+  text-underline-offset: 3px;
 }
 
 .header__link_active {
@@ -43,15 +43,16 @@
 }
 
 .header__logo-image {
-  width: 100%;
+  padding-top: 8px; 
 }
+
 .address {
   color: #000;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
   line-height: 135%;
-  text-underline-offset: 4px;
+  text-underline-offset: 3px;
 }
 
 .header__address {
@@ -61,11 +62,12 @@
   align-items: flex-start;
   max-width: 240px;
   list-style: none;
+  padding-top: 3px;
 }
 
 .cover {
   position: relative;
-  min-height: 760px;
+  min-height: 758px;
   background-image: url(./../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -89,30 +91,33 @@
   font-weight: 700;
   font-size: 100px;
   text-transform: uppercase;
-  padding: 161px 29px 208px 55px;
   background-color: transparent;
 }
 
 .aligned-text {
   display: block;
-  justify-content: center;
-  line-height: 1.3;
 }
 
 .aligned-text_left {
   text-align: left;
+  margin-left: 50px;
+  margin-top: 165px;
 }
 
 .aligned-text_center {
   text-align: center;
+  margin-top: 17px;
+  margin-right: -30px;
 }
 
 .aligned-text_right {
   text-align: right;
+  margin-top: 17px;
+  margin-right: 20px;
 }
 
 .letter-spacing-extended {
-  letter-spacing: 28.3px;
+  letter-spacing: 30px;
 }
 
 .cover__description {
@@ -134,7 +139,6 @@
   color: #fff;
   word-spacing: 18px;
   padding: 12px 0;
-  
 }
 
 .bet-button {
@@ -147,6 +151,97 @@
   background-color: transparent;
   border: 1px solid #fff;
   padding: 12px 32.5px;
-  
-  
+}
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+
+.lots__heading {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 40px;
+  color: #000;
+  padding: 180px 0 0 64px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  padding: 0 24px 3px;
+  flex-wrap: wrap; 
+}
+
+.lots__card-list-item {
+  list-style: none;
+  min-height: 596px;
+  flex-basis: 334px;
+  flex-grow: 1; 
+}
+
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card_type_film {
+  background-image: url(./../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(./../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(./../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card-link {
+  height: 100%;
+  padding: 47px 40px;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #fff;
+  line-height: 120%;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 1px;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.lots__look-more-link {
+  font-weight: 400;
+  font-size: 20px;
+  color: #000000;
+  text-underline-offset: 4px;
+  padding: 0 0 120px 64px;
 }
