--- a/styles/style.css
+++ b/styles/style.css
@@ -61,8 +61,8 @@
   justify-self: end;
   align-items: flex-start;
   max-width: 240px;
-  list-style: none;
   padding-top: 3px;
+  list-style: none;
 }
 
 .cover {
@@ -99,21 +99,21 @@
 }
 
 .aligned-text_left {
-  text-align: left;
-  margin-left: 50px;
   margin-top: 165px;
+  margin-left: 50px;
+  text-align: left;
 }
 
 .aligned-text_center {
-  text-align: center;
   margin-top: 17px;
   margin-right: -30px;
+  text-align: center;
 }
 
 .aligned-text_right {
-  text-align: right;
   margin-top: 17px;
   margin-right: 20px;
+  text-align: right;
 }
 
 .letter-spacing-extended {
@@ -121,36 +121,36 @@
 }
 
 .cover__description {
-  display: flex;
   position: absolute;
   inset: 0;
   z-index: 2;
-  align-items: end;
+  display: flex;
   justify-content: space-between;
+  align-items: end;
   gap: 104px;
   padding: 650px 50px 50px 50px;
 }
 
 .cover__description-text {
-  font-style: normal;
+  padding: 12px 0;
+  color: #fff;
   font-weight: 400;
   font-size: 22px;
+  font-style: normal;
   text-transform: uppercase;
-  color: #fff;
   word-spacing: 18px;
-  padding: 12px 0;
 }
 
 .bet-button {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: transparent;
   border: 1px solid #fff;
   padding: 12px 32.5px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 22px;
+  font-style: normal;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
 }
 
 .lots {
@@ -160,33 +160,33 @@
 }
 
 .lots__heading {
-  text-transform: uppercase;
+  padding: 180px 0 0 64px;
+  color: #000;
   font-weight: 700;
   font-size: 40px;
-  color: #000;
-  padding: 180px 0 0 64px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 25px;
-  padding: 0 24px 3px;
-  flex-wrap: wrap; 
+  padding: 0 24px 3px; 
 }
 
 .lots__card-list-item {
-  list-style: none;
-  min-height: 596px;
+  flex-grow: 1;
   flex-basis: 334px;
-  flex-grow: 1; 
+  min-height: 596px;
+  list-style: none; 
 }
 
 .card {
-  height: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
+  height: 100%;
 }
 
 .card_type_film {
@@ -211,37 +211,65 @@
 }
 
 .card-link {
-  height: 100%;
-  padding: 47px 40px;
-  text-decoration: none;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
+  height: 100%;
+  padding: 47px 40px;
+  text-decoration: none;
 }
 
 .card__title {
+  color: #fff;
   font-weight: 700;
   font-size: 22px;
-  text-transform: uppercase;
-  color: #fff;
   line-height: 120%;
   text-decoration: underline;
-  text-underline-offset: 3px;
   text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
 }
 
 .card__text {
+  color: #fff;
   font-weight: 400;
   font-size: 20px;
-  color: #fff;
   text-decoration: none;
 }
 
 .lots__look-more-link {
+  padding: 0 0 120px 64px;
+  color: #000000;
   font-weight: 400;
   font-size: 20px;
-  color: #000000;
   text-underline-offset: 4px;
-  padding: 0 0 120px 64px;
+}
+
+.about{
+  display: grid;
+  grid-template-columns: 334px 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 0 24px; 
+}
+/*
+.about__column {}
+.about__logo {}
+.about__logo-image {}*/
+
+.about__title {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+/*.description_block {}*/
+
+.about__text {
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 120%;
 }
