--- a/styles/style.css
+++ b/styles/style.css
@@ -3,17 +3,18 @@
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   gap: 36px;
-  padding: 100px 50px 91px;
+  max-height: 293px;
+  padding: 78px 50px 91px;
 }
 
 .header-menu {
   display: flex;
-  padding-top: 4px;
+  padding-top: 10px;
 }
 
 .header__links-list {
   display: flex;
-  align-items: start;
+  align-items: stretch;
   gap: 32px;
 }
 
@@ -30,6 +31,7 @@
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
+  line-height: 100%;
   text-underline-offset: 3px;
 }
 
@@ -39,11 +41,12 @@
 
 .header__logo {
   display: block;
-  padding-top: 9px;
+  padding-top: 14px;
 }
 
 .header__logo-image {
   width: 136px;
+  height: 105px;
 }
 
 .address {
@@ -51,7 +54,7 @@
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  line-height: 135%;
+  line-height: 136%;
   text-underline-offset: 3px;
 }
 
@@ -59,9 +62,8 @@
   display: flex;
   flex-direction: column;
   justify-self: end;
-  align-items: flex-start;
   max-width: 240px;
-  padding-top: 4px;
+  padding-top: 10px;
   list-style: none;
 }
 
@@ -90,6 +92,8 @@
   color: #fff;
   font-weight: 700;
   font-size: 100px;
+  font-style: normal;
+  line-height: 117%;
   text-transform: uppercase;
   background-color: transparent;
 }
@@ -137,6 +141,7 @@
   font-weight: 400;
   font-size: 22px;
   font-style: normal;
+  line-height: 120%;
   text-transform: uppercase;
   word-spacing: 18px;
 }
@@ -148,6 +153,7 @@
   font-weight: 500;
   font-size: 22px;
   font-style: normal;
+  line-height: 120%;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
@@ -156,7 +162,7 @@
 .lots {
   display: flex;
   flex-direction: column;
-  gap: 27px;
+  gap: 25px;
 }
 
 .lots__heading {
@@ -164,6 +170,8 @@
   color: #000;
   font-weight: 700;
   font-size: 40px;
+  font-style: normal;
+  line-height: 120%;
   text-transform: uppercase;
 }
 
@@ -172,7 +180,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 25px;
-  padding: 0 24px 3px;
+  padding: 0 24px 7px;
 }
 
 .lots__card-list-item {
@@ -224,6 +232,7 @@
   color: #fff;
   font-weight: 700;
   font-size: 22px;
+  font-style: normal;
   line-height: 120%;
   text-decoration: underline;
   text-decoration-thickness: 1px;
@@ -235,8 +244,9 @@
   color: #fff;
   font-weight: 400;
   font-size: 20px;
-  text-decoration: none;
+  font-style: normal;
   line-height: 120%;
+  text-decoration: none;
 }
 
 .lots__look-more-link {
@@ -244,6 +254,8 @@
   color: #000000;
   font-weight: 400;
   font-size: 20px;
+  font-style: normal;
+  line-height: 110%;
   text-underline-offset: 4px;
 }
 
@@ -270,21 +282,23 @@
 }
 
 .about__logo-image {
-  display: block;
   position: absolute;
   inset: 0;
   z-index: 1;
+  display: block;
   justify-self: center;
   align-self: center;
   width: 148px;
 }
 
 .about__title {
+  padding: 102px 402px 100px 0;
   color: #000;
   font-weight: 700;
   font-size: 40px;
+  font-style: normal;
+  line-height: 110%;
   text-transform: uppercase;
-  padding: 102px 402px 100px 0;
 }
 
 .description_block {
@@ -298,5 +312,68 @@
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
-  line-height: 120%;
+  line-height: 121%;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  gap: 140px;
+  padding: 23px 50px 0;
+}
+
+.footer__address {
+  display: flex;
+  flex-direction: column;
+  padding-top: 2px;
+  list-style: none;
+}
+
+.footer__menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__menu-list {
+  justify-items: center;
+  padding-top: 3px;
+}
+
+.footer__menu-list-item {
+  list-style: none;
+}
+
+.footer__menu-link {
+  color: #000;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 117%;
+  text-underline-offset: 3px;
+  list-style: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-list-item {
+  list-style: none;
+}
+
+.footer__social-link {
+  display: block;
+  width: 48px;
+  height: 48px;
+  padding-top: 2px;
+}
+
+.footer__social-icon {
+  width: 100%;
 }
