--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   gap: 36px;
   width: 100%;
   /*max-height: 293px;*/
-  padding: 76px 50px 92px;
+  padding: 78px 50px 91px;
 }
 
 .header-menu {
@@ -104,14 +104,14 @@
 }
 
 .aligned-text_left {
-  margin-top: 163px;
+  margin-top: 165px;
   margin-left: 50px;
   text-align: left;
 }
 
 .aligned-text_center {
-  margin-top: 20px;
-  margin-right: -30px;
+  margin-top: 19px;
+  margin-left: 29px;
   text-align: center;
 }
 
