--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   gap: 36px;
   width: 100%;
   /*max-height: 293px;*/
-  padding: 78px 50px 91px;
+  padding: 80px 50px 91px;
 }
 
 .header-menu {
@@ -70,8 +70,9 @@
 
 .cover {
   position: relative;
-  min-height: 758px;
-  background-image: url(./../images/cover.jpg);
+  height: 758px;
+  padding-top: 2px;
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -87,16 +88,12 @@
 }
 
 .cover__title {
-  position: absolute;
-  inset: 0;
-  z-index: 2;
   color: #fff;
   font-weight: 700;
   font-size: 100px;
   font-style: normal;
   line-height: 117%;
   text-transform: uppercase;
-  background-color: transparent;
 }
 
 .aligned-text {
@@ -104,19 +101,19 @@
 }
 
 .aligned-text_left {
-  margin-top: 165px;
+  margin-top: 163px;
   margin-left: 50px;
   text-align: left;
 }
 
 .aligned-text_center {
-  margin-top: 19px;
+  margin-top: 18px;
   margin-left: 29px;
   text-align: center;
 }
 
 .aligned-text_right {
-  margin-top: 17px;
+  margin-top: 18px;
   margin-right: 20px;
   text-align: right;
 }
@@ -126,14 +123,11 @@
 }
 
 .cover__description {
-  position: absolute;
-  inset: 0;
-  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: end;
   gap: 104px;
-  padding: 650px 50px 50px;
+  padding: 104px 52px 59px 49px;
 }
 
 .cover__description-text {
@@ -149,7 +143,7 @@
 
 .bet-button {
   border: 1px solid #fff;
-  padding: 12px 32.5px;
+  padding: 11px 30px 12px;
   color: #fff;
   font-weight: 500;
   font-size: 22px;
@@ -186,7 +180,7 @@
 
 .lots__card-list-item {
   flex-grow: 1;
-  flex-basis: 334px;
+  flex-basis:334px;
   min-height: 596px;
   list-style: none;
 }
@@ -195,37 +189,29 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100%;
-}
-
-.card_type_film {
-  background-image: url(./../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.card_type_book {
-  background-image: url(./../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.card_type_picture {
-  background-image: url(./../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.card-link {
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   gap: 20px;
   height: 100%;
   padding: 47px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link {
+  height: 100%;
   text-decoration: none;
 }
 
