--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
   align-items: center;
   gap: 36px;
   width: 100%;
-  /*max-height: 293px;*/
   padding: 80px 50px 91px;
 }
 
@@ -70,7 +69,7 @@
 
 .cover {
   position: relative;
-  height: 758px;
+  min-height: 758px;
   padding-top: 2px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
@@ -88,6 +87,9 @@
 }
 
 .cover__title {
+  position: relative;
+  inset: 0;
+  z-index: 2;
   color: #fff;
   font-weight: 700;
   font-size: 100px;
@@ -123,11 +125,14 @@
 }
 
 .cover__description {
+  position: relative;
+  inset: 0;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: end;
   gap: 104px;
-  padding: 104px 52px 59px 49px;
+  padding: 105px 52px 50px 49px;
 }
 
 .cover__description-text {
@@ -216,6 +221,9 @@
 }
 
 .card__title {
+  position: relative;
+  inset: 0;
+  z-index: 2;
   color: #fff;
   font-weight: 700;
   font-size: 22px;
@@ -228,6 +236,9 @@
 }
 
 .card__text {
+  position: relative;
+  inset: 0;
+  z-index: 2;
   color: #fff;
   font-weight: 400;
   font-size: 20px;
